# audio-llm-benchmark

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  clair_a.py  cli.py  docker-compose.yaml  pyproject.toml  run.sh  todo.md  visualization.py
data/: data
docs/: envs.md  folder_structure.md  subprojects.md
envs/evaluation/: pyproject.toml
envs/inference/: pyproject.toml
experiments/: README.md
experiments/attention/: README.md  visualization.py
experiments/rubrics/: README.md
experiments/similarity/: README.md
experiments/similarity/audio_similarity/: calculate_similarity.py
projects/audio_similarity/: predictions_with_audio.parquet  predictions_with_noise.parquet  similarity_results.json
projects/make_rubrics/: judge.py  rm_dup.py  run.py
scripts/: README.md  download_datasets.sh  install_vllm.sh  run.sh  run_clotho.sh  run_clotho_evaluation.sh  run_clotho_inference.sh  run_evaluation.sh  run_inference.sh  run_mmau_pro.sh  run_mmau_pro_evaluation.sh  run_mmau_pro_inference.sh  view_attention_map.sh
scripts/env/: restore_env.sh  setup_evaluation.sh  setup_inference.sh
scripts/pipelines/: clotho_evaluation_only.sh  clotho_inference_only.sh  clotho_pipeline.sh  evaluation_pipeline.sh  inference_pipeline.sh  mmau_pro_evaluation_only.sh  mmau_pro_inference_only.sh  mmau_pro_pipeline.sh
scripts/tasks/: clotho_evaluation.sh  clotho_inference.sh  mmau_pro_evaluation.sh  mmau_pro_inference.sh
src/: __init__.py
src/clotho/: evaluation.py  inference.py
src/fense/: evaluator.py
src/mmau-pro/: inference.py
src/models/: __init__.py  gemma3n.py  qwen2_5_omni.py  qwen3_omni.py
src/utils/: attention_io.py  attention_plot.py  attention_utils.py  audio_length.py  clotho_download.py  mmau-pro_download.py  paths.py  seed.py
