[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lalm_bench"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.20.0",
]

[project.scripts]
lalm = "cli:app"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["cli"]

[tool.ruff]
exclude = ["extra"]
